events/parser/EventsParser.py
# Generated from events\parser\Events.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

from events.models import *



class EventsParser ( Parser ):

    grammarFileName = "Events.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'------------------------------------------------------------'", 
                     "'InitGame'", "'InitRound'", "'InitAuth'", "'ShutdownGame'", 
                     "'Warmup'", "'Session data initialised for client on slot'", 
                     "'at'", "'ClientConnect'", "'ClientDisconnect'", "'ClientBegin'", 
                     "'ClientSpawn'", "'ClientUserinfo'", "'ClientUserinfoChanged'", 
                     "'AccountValidated'", "'say'", "'saytell'", "'sayteam'", 
                     "'Radio'", "'tell'", "'Kill'", "'Item'", "'Flag'", 
                     "'FlagCaptureTime'", "'Flag Return'", "'to'", "'by'", 
                     "<INVALID>", "<INVALID>", "'\\'", "':'", "'-'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "SEPARATOR", "INITGAME", "INITROUND", 
                      "INITAUTH", "SHUTDOWNGAME", "WARMUP", "SESSION_DATA_INITIALISED", 
                      "AT", "CLIENTCONNECT", "CLIENTDISCONNECT", "CLIENTBEGIN", 
                      "CLIENTSPAWN", "CLIENTUSERINFO", "CLIENTUSERINFOCHANGED", 
                      "ACCOUNTVALIDATED", "SAY", "SAYTELL", "SAYTEAM", "RADIO", 
                      "TELL", "KILL", "ITEM", "FLAG", "FLAGCAPTURETIME", 
                      "FLAGRETURN", "TO", "BY", "WHITESPACE", "NEWLINE", 
                      "BACK_SLASH", "COLON", "MINUS", "DOUBLE_QUOTE", "DIGIT", 
                      "ANY_CHAR" ]

    RULE_events = 0
    RULE_event = 1
    RULE_eventTime = 2
    RULE_separatorEvent = 3
    RULE_initGameEvent = 4
    RULE_initRoundEvent = 5
    RULE_initAuthEvent = 6
    RULE_shutdownGameEvent = 7
    RULE_warmupEvent = 8
    RULE_sessionDataInitEvent = 9
    RULE_clientConnectEvent = 10
    RULE_clientDisconnectEvent = 11
    RULE_clientBeginEvent = 12
    RULE_clientSpawnEvent = 13
    RULE_clientUserinfoEvent = 14
    RULE_clientUserinfoChangedEvent = 15
    RULE_accountValidatedEvent = 16
    RULE_sayEvent = 17
    RULE_sayTellEvent = 18
    RULE_sayTeamEvent = 19
    RULE_tellEvent = 20
    RULE_radioEvent = 21
    RULE_killEvent = 22
    RULE_itemEvent = 23
    RULE_flagEvent = 24
    RULE_flagCaptureTimeEvent = 25
    RULE_flagReturnEvent = 26
    RULE_intValue = 27
    RULE_manyButNewLine = 28
    RULE_manyButWhitespace = 29
    RULE_manyButBackSlash = 30
    RULE_manyButBackSlashOrNewLine = 31
    RULE_manyButDoubleQuote = 32

    ruleNames =  [ "events", "event", "eventTime", "separatorEvent", "initGameEvent", 
                   "initRoundEvent", "initAuthEvent", "shutdownGameEvent", 
                   "warmupEvent", "sessionDataInitEvent", "clientConnectEvent", 
                   "clientDisconnectEvent", "clientBeginEvent", "clientSpawnEvent", 
                   "clientUserinfoEvent", "clientUserinfoChangedEvent", 
                   "accountValidatedEvent", "sayEvent", "sayTellEvent", 
                   "sayTeamEvent", "tellEvent", "radioEvent", "killEvent", 
                   "itemEvent", "flagEvent", "flagCaptureTimeEvent", "flagReturnEvent", 
                   "intValue", "manyButNewLine", "manyButWhitespace", "manyButBackSlash", 
                   "manyButBackSlashOrNewLine", "manyButDoubleQuote" ]

    EOF = Token.EOF
    SEPARATOR=1
    INITGAME=2
    INITROUND=3
    INITAUTH=4
    SHUTDOWNGAME=5
    WARMUP=6
    SESSION_DATA_INITIALISED=7
    AT=8
    CLIENTCONNECT=9
    CLIENTDISCONNECT=10
    CLIENTBEGIN=11
    CLIENTSPAWN=12
    CLIENTUSERINFO=13
    CLIENTUSERINFOCHANGED=14
    ACCOUNTVALIDATED=15
    SAY=16
    SAYTELL=17
    SAYTEAM=18
    RADIO=19
    TELL=20
    KILL=21
    ITEM=22
    FLAG=23
    FLAGCAPTURETIME=24
    FLAGRETURN=25
    TO=26
    BY=27
    WHITESPACE=28
    NEWLINE=29
    BACK_SLASH=30
    COLON=31
    MINUS=32
    DOUBLE_QUOTE=33
    DIGIT=34
    ANY_CHAR=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EventsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # EventContext

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.EventContext)
            else:
                return self.getTypedRuleContext(EventsParser.EventContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.NEWLINE)
            else:
                return self.getToken(EventsParser.NEWLINE, i)

        def getRuleIndex(self):
            return EventsParser.RULE_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents" ):
                listener.enterEvents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents" ):
                listener.exitEvents(self)




    def events(self):

        localctx = EventsParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx.value = []
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EventsParser.WHITESPACE) | (1 << EventsParser.MINUS) | (1 << EventsParser.DIGIT))) != 0):
                self.state = 67
                localctx.a = self.event()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==EventsParser.NEWLINE:
                    self.state = 68
                    self.match(EventsParser.NEWLINE)


                localctx.value.append(localctx.a.value)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.time = None # EventTimeContext
            self.separatorEvt = None # SeparatorEventContext
            self.initGameEvt = None # InitGameEventContext
            self.initRoundEvt = None # InitRoundEventContext
            self.initAuthEvt = None # InitAuthEventContext
            self.shutdownGameEvt = None # ShutdownGameEventContext
            self.warmupEvt = None # WarmupEventContext
            self.sessionDataInitEvt = None # SessionDataInitEventContext
            self.clientConnectEvt = None # ClientConnectEventContext
            self.clientDisconnectEvt = None # ClientDisconnectEventContext
            self.clientBeginEvt = None # ClientBeginEventContext
            self.clientSpawnEvt = None # ClientSpawnEventContext
            self.clientUserinfoEvt = None # ClientUserinfoEventContext
            self.clientUserinfoChangedEvt = None # ClientUserinfoChangedEventContext
            self.accountValidatedEvt = None # AccountValidatedEventContext
            self.sayEvt = None # SayEventContext
            self.sayTellEvt = None # SayTellEventContext
            self.sayTeamEvt = None # SayTeamEventContext
            self.tellEvt = None # TellEventContext
            self.radioEvt = None # RadioEventContext
            self.killEvt = None # KillEventContext
            self.itemEvt = None # ItemEventContext
            self.flagEvt = None # FlagEventContext
            self.flagCaptureTimeEvt = None # FlagCaptureTimeEventContext
            self.flagReturnEvt = None # FlagReturnEventContext

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.WHITESPACE)
            else:
                return self.getToken(EventsParser.WHITESPACE, i)

        def eventTime(self):
            return self.getTypedRuleContext(EventsParser.EventTimeContext,0)


        def separatorEvent(self):
            return self.getTypedRuleContext(EventsParser.SeparatorEventContext,0)


        def initGameEvent(self):
            return self.getTypedRuleContext(EventsParser.InitGameEventContext,0)


        def initRoundEvent(self):
            return self.getTypedRuleContext(EventsParser.InitRoundEventContext,0)


        def initAuthEvent(self):
            return self.getTypedRuleContext(EventsParser.InitAuthEventContext,0)


        def shutdownGameEvent(self):
            return self.getTypedRuleContext(EventsParser.ShutdownGameEventContext,0)


        def warmupEvent(self):
            return self.getTypedRuleContext(EventsParser.WarmupEventContext,0)


        def sessionDataInitEvent(self):
            return self.getTypedRuleContext(EventsParser.SessionDataInitEventContext,0)


        def clientConnectEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientConnectEventContext,0)


        def clientDisconnectEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientDisconnectEventContext,0)


        def clientBeginEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientBeginEventContext,0)


        def clientSpawnEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientSpawnEventContext,0)


        def clientUserinfoEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientUserinfoEventContext,0)


        def clientUserinfoChangedEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientUserinfoChangedEventContext,0)


        def accountValidatedEvent(self):
            return self.getTypedRuleContext(EventsParser.AccountValidatedEventContext,0)


        def sayEvent(self):
            return self.getTypedRuleContext(EventsParser.SayEventContext,0)


        def sayTellEvent(self):
            return self.getTypedRuleContext(EventsParser.SayTellEventContext,0)


        def sayTeamEvent(self):
            return self.getTypedRuleContext(EventsParser.SayTeamEventContext,0)


        def tellEvent(self):
            return self.getTypedRuleContext(EventsParser.TellEventContext,0)


        def radioEvent(self):
            return self.getTypedRuleContext(EventsParser.RadioEventContext,0)


        def killEvent(self):
            return self.getTypedRuleContext(EventsParser.KillEventContext,0)


        def itemEvent(self):
            return self.getTypedRuleContext(EventsParser.ItemEventContext,0)


        def flagEvent(self):
            return self.getTypedRuleContext(EventsParser.FlagEventContext,0)


        def flagCaptureTimeEvent(self):
            return self.getTypedRuleContext(EventsParser.FlagCaptureTimeEventContext,0)


        def flagReturnEvent(self):
            return self.getTypedRuleContext(EventsParser.FlagReturnEventContext,0)


        def getRuleIndex(self):
            return EventsParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)




    def event(self):

        localctx = EventsParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EventsParser.WHITESPACE:
                self.state = 78
                self.match(EventsParser.WHITESPACE)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            localctx.time = self.eventTime()
            self.state = 85
            self.match(EventsParser.WHITESPACE)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EventsParser.SEPARATOR]:
                self.state = 86
                localctx.separatorEvt = self.separatorEvent()
                localctx.value = localctx.separatorEvt.value
                pass
            elif token in [EventsParser.INITGAME]:
                self.state = 89
                localctx.initGameEvt = self.initGameEvent()
                localctx.value = localctx.initGameEvt.value
                pass
            elif token in [EventsParser.INITROUND]:
                self.state = 92
                localctx.initRoundEvt = self.initRoundEvent()
                localctx.value = localctx.initRoundEvt.value
                pass
            elif token in [EventsParser.INITAUTH]:
                self.state = 95
                localctx.initAuthEvt = self.initAuthEvent()
                localctx.value = localctx.initAuthEvt.value
                pass
            elif token in [EventsParser.SHUTDOWNGAME]:
                self.state = 98
                localctx.shutdownGameEvt = self.shutdownGameEvent()
                localctx.value = localctx.shutdownGameEvt.value
                pass
            elif token in [EventsParser.WARMUP]:
                self.state = 101
                localctx.warmupEvt = self.warmupEvent()
                localctx.value = localctx.warmupEvt.value
                pass
            elif token in [EventsParser.SESSION_DATA_INITIALISED]:
                self.state = 104
                localctx.sessionDataInitEvt = self.sessionDataInitEvent()
                localctx.value = localctx.sessionDataInitEvt.value
                pass
            elif token in [EventsParser.CLIENTCONNECT]:
                self.state = 107
                localctx.clientConnectEvt = self.clientConnectEvent()
                localctx.value = localctx.clientConnectEvt.value
                pass
            elif token in [EventsParser.CLIENTDISCONNECT]:
                self.state = 110
                localctx.clientDisconnectEvt = self.clientDisconnectEvent()
                localctx.value = localctx.clientDisconnectEvt.value
                pass
            elif token in [EventsParser.CLIENTBEGIN]:
                self.state = 113
                localctx.clientBeginEvt = self.clientBeginEvent()
                localctx.value = localctx.clientBeginEvt.value
                pass
            elif token in [EventsParser.CLIENTSPAWN]:
                self.state = 116
                localctx.clientSpawnEvt = self.clientSpawnEvent()
                localctx.value = localctx.clientSpawnEvt.value
                pass
            elif token in [EventsParser.CLIENTUSERINFO]:
                self.state = 119
                localctx.clientUserinfoEvt = self.clientUserinfoEvent()
                localctx.value = localctx.clientUserinfoEvt.value
                pass
            elif token in [EventsParser.CLIENTUSERINFOCHANGED]:
                self.state = 122
                localctx.clientUserinfoChangedEvt = self.clientUserinfoChangedEvent()
                localctx.value = localctx.clientUserinfoChangedEvt.value
                pass
            elif token in [EventsParser.ACCOUNTVALIDATED]:
                self.state = 125
                localctx.accountValidatedEvt = self.accountValidatedEvent()
                localctx.value = localctx.accountValidatedEvt.value
                pass
            elif token in [EventsParser.SAY]:
                self.state = 128
                localctx.sayEvt = self.sayEvent()
                localctx.value = localctx.sayEvt.value
                pass
            elif token in [EventsParser.SAYTELL]:
                self.state = 131
                localctx.sayTellEvt = self.sayTellEvent()
                localctx.value = localctx.sayTellEvt.value
                pass
            elif token in [EventsParser.SAYTEAM]:
                self.state = 134
                localctx.sayTeamEvt = self.sayTeamEvent()
                localctx.value = localctx.sayTeamEvt.value
                pass
            elif token in [EventsParser.TELL]:
                self.state = 137
                localctx.tellEvt = self.tellEvent()
                localctx.value = localctx.tellEvt.value
                pass
            elif token in [EventsParser.RADIO]:
                self.state = 140
                localctx.radioEvt = self.radioEvent()
                localctx.value = localctx.radioEvt.value
                pass
            elif token in [EventsParser.KILL]:
                self.state = 143
                localctx.killEvt = self.killEvent()
                localctx.value = localctx.killEvt.value
                pass
            elif token in [EventsParser.ITEM]:
                self.state = 146
                localctx.itemEvt = self.itemEvent()
                localctx.value = localctx.itemEvt.value
                pass
            elif token in [EventsParser.FLAG]:
                self.state = 149
                localctx.flagEvt = self.flagEvent()
                localctx.value = localctx.flagEvt.value
                pass
            elif token in [EventsParser.FLAGCAPTURETIME]:
                self.state = 152
                localctx.flagCaptureTimeEvt = self.flagCaptureTimeEvent()
                localctx.value = localctx.flagCaptureTimeEvt.value
                pass
            elif token in [EventsParser.FLAGRETURN]:
                self.state = 155
                localctx.flagReturnEvt = self.flagReturnEvent()
                localctx.value = localctx.flagReturnEvt.value
                pass
            else:
                raise NoViableAltException(self)

            localctx.value.time = localctx.time.value
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventTimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # IntValueContext
            self.b = None # IntValueContext

        def COLON(self):
            return self.getToken(EventsParser.COLON, 0)

        def intValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.IntValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.IntValueContext,i)


        def getRuleIndex(self):
            return EventsParser.RULE_eventTime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventTime" ):
                listener.enterEventTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventTime" ):
                listener.exitEventTime(self)




    def eventTime(self):

        localctx = EventsParser.EventTimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eventTime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            localctx.a = self.intValue()
            self.state = 163
            self.match(EventsParser.COLON)
            self.state = 164
            localctx.b = self.intValue()
            localctx.value = int((None if localctx.a is None else self._input.getText(localctx.a.start,localctx.a.stop))) * 60 + int((None if localctx.b is None else self._input.getText(localctx.b.start,localctx.b.stop)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def SEPARATOR(self):
            return self.getToken(EventsParser.SEPARATOR, 0)

        def getRuleIndex(self):
            return EventsParser.RULE_separatorEvent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparatorEvent" ):
                listener.enterSeparatorEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparatorEvent" ):
                listener.exitSeparatorEvent(self)




    def separatorEvent(self):

        localctx = EventsParser.SeparatorEventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_separatorEvent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(EventsParser.SEPARATOR)
            localctx.value = SeparatorEvent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitGameEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # ManyButBackSlashContext
            self.b = None # ManyButBackSlashOrNewLineContext

        def INITGAME(self):
            return self.getToken(EventsParser.INITGAME, 0)

        def COLON(self):
            return self.getToken(EventsParser.COLON, 0)

        def WHITESPACE(self):
            return self.getToken(EventsParser.WHITESPACE, 0)

        def BACK_SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.BACK_SLASH)
            else:
                return self.getToken(EventsParser.BACK_SLASH, i)

        def manyButBackSlash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.ManyButBackSlashContext)
            else:
                return self.getTypedRuleContext(EventsParser.ManyButBackSlashContext,i)


        def manyButBackSlashOrNewLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.ManyButBackSlashOrNewLineContext)
            else:
                return self.getTypedRuleContext(EventsParser.ManyButBackSlashOrNewLineContext,i)


        def getRuleIndex(self):
            return EventsParser.RULE_initGameEvent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitGameEvent" ):
                listener.enterInitGameEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitGameEvent" ):
                listener.exitInitGameEvent(self)




    def initGameEvent(self):

        localctx = EventsParser.InitGameEventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initGameEvent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(EventsParser.INITGAME)
            self.state = 171
            self.match(EventsParser.COLON)
            self.state = 172
            self.match(EventsParser.WHITESPACE)
            localctx.value = InitGameEvent()
            self.state = 180 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 174
                self.match(EventsParser.BACK_SLASH)
                self.state = 175
                localctx.a = self.manyButBackSlash()
                self.state = 176
                self.match(EventsParser.BACK_SLASH)
                self.state = 177
                localctx.b = self.manyButBackSlashOrNewLine()
                localctx.value.parameters[(None if localctx.a is None else self._input.getText(localctx.a.start,localctx.a.stop))]=(None if localctx.b is None else self._input.getText(localctx.b.start,localctx.b.stop))
                self.state = 182 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EventsParser.BACK_SLASH):
                    break
